--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["Countsy", "ilike", "jsmastery", "Verba"]
+	"cSpell.words": ["Countsy", "ilike", "jsmastery", "soundwaves", "Verba"]
 }
